trunk/media/styles/caitlin.css
/* ... */
.sector_carousel .newsbits h2{
	font-size: 130%;
}


/*------ Sector Updates Styling (data page styling too!)------*/

.updates_head, .data-section { 
	border-top: 1px solid #cbcbcb; 
	background-color:#f3f3f4; 
	padding: 0 0 0 9px; 
	border-bottom:1px solid #ffffff; 
	color:#333333; 
	font-size: 14px; 
	background-image:url(/media/images/front_update_head_bg_alt.png); 
	background-repeat:repeat-x;
	height: 31px;
	margin-bottom: 20px;
}
#update_headline h4{
	display: inline;
}

#Transportation h3.sector_updates, #Nonprofits h3.sector_updates, #Energy h3.sector_updates, #Housing h3.sector_updates, .data-section h4{
	font-size: 110%;
	color: #636363;
	background-image: none;
	padding-left: 0;
	padding-top: 6px;
	margin-left: 5px;
	font-weight: normal;

}
.updates_head a{
	background: url('../images/rss_icon.png') left center no-repeat;
	display: inline-block;
	width: 12px;
	height: 12px;
	text-indent: -9999em;
}

h4 a {
	color: #154661;
    margin-bottom: 15px;
    text-decoration: none;
}

#update_item { 
	padding:0 10px 0 0; 
	margin:0 0 2px 0;
}

#update_item .readmore { border:1px solid #e6e6e6;  font-size:90%; padding:2px 3px 0 3px; margin:0;  text-align:center;}
#update_item a.readmore { text-decoration:none; }
.update_date { 
	font-size:90%;
	color: #888888;
	font-style: italic;
}

#update_icon { 
	padding: 0 5px 0 0;
	margin: 0; 
	text-align: right;
	display: inline;
}

#update_headline { 
}

/*------ General Page Content Styling ------*/

.page-content li{
	line-height: 1.65;
}

.page-content ul{
	margin-bottom: 15px;
	margin-right: 20px;
}

h5{
	margin-bottom: 15px;
	margin-top: 10px;
	padding-right: 20px;
}

cite{
	font-size: 80%;
	color: #6a6a6a;
	margin-bottom: 30px;
	display: block;
}

/*------ CHARTS ------*/

img.chart {  }
img.center { margin: 0 auto; display:block; }

ul.horizontal { display:inline; width: 100%; float:left; margin-left: 50px;}
ul.horizontal li { float:left; width: 20%; }
ul.horizontal li h6 {text-align:center;}
ul.horizontal li img {margin-left: auto; margin-right: auto; display:block; }
div.full {width: 100%; }
div.charts {font-family: sans-serif; }
div.charts h5 {text-align:center; padding: 0 20px}
div.charts.left {
	float:left; 
	width: 320px;
	padding: 20px 20px 20px 0;
}
div.charts.right {
	float:right; 
	width: 320px;
	padding: 20px 0 20px 20px;
}

/*------ footnotes ------*/
.footnotes { margin-top: 20px}
ol.footnotes { font-size: 0.9em; color: #6a6a6a;}
ol.footnotes li { margin-bottom: 0.8em; line-height: 1.3em;}
a.footnote { font-size: 0.7em; position: relative; top: -0.8em;}
.footnotes p{ font-size: 0.9em; color: #6a6a6a; line-height: 1.3em; }

.attribution { font-size: 0.9em; margin-bottom: 20px; margin-top: 10px; display:block; text-align:left; padding-right:20px;}


/*------ PTED styling ------*/

.display_type, .date_range{
	display: inline-block;
}
.date_range{
	float: right;
	margin-right: 20px;
}
.download_csv{
	float: right;
	margin: 15px 20px 0 0;
}
.table_header{
}

#filterForm, #loaderForm{
	margin-top: 20px;
	padding-top: 10px;
	clear: both;
}
.summary_key li{
	display: inline;
	font-size: 85%;
}
.latest{
	background:url('../images/latest.jpg') left center no-repeat ;
	padding: 25px;
}
.previous{
	background:url('../images/previous.jpg') left center no-repeat ;
	padding: 25px;
}

/*------ Misc Page Styling ------*/


.mode_alt{
	float: right;
	width: 360px;
}
.left{
	float: left;
	padding-right: 20px;
}
.bio_list, .sub_list_bios, .press-releases{
	list-style-type: none;
	margin-left: 0;
}
.press-releases li{
	margin-bottom: 10px;
}
.bio_list{
	-moz-column-count:2;
	-webkit-column-count: 2;
	-moz-column-gap: 20px
	-webkit-column-gap: 20px
	-moz-column-rule: none;
	-webkit-column-rule: none;
}
.bio_list li{
	display: block;
	margin-bottom: 20px;
}
.bio_list .affil{
	display: block;
	vertical-align: top;
}
.bio_list a{
	font-weight: bold;
}

dl{
	margin-bottom: 20px;
	margin-top: 10px;
}

.subsidyscope-contributors{
	clear: both;
}
.subsidyscope-contributors dd{
	float: left;
	width: 460px;
	margin-bottom: 10px;
}
.subsidyscope-contributors dt{
	width: 200px;
	float: left;
	clear: both;
}

#staff-page h5{
	clear: both;
	margin-top: 20px;
}

blockquote{
	color: ;
}

.program{
	border-bottom: 1px solid #cccccc;
}

/*------ Generic chart styles ------*/

#subsidy-charts tr.header-row td, #subsidy-charts tr.header-row th{ 
	background-color: #e4e4e4; 
	border-top: 1px solid #a5a5a5; 
	border-bottom: 1px solid #a5a5a5; 
	font-weight: bold;
}

#subsidy-charts tr.header-row td:last-of-type{
	border-right: none;
}
#subsidy-charts tr td:last-of-type{
	border-right: none;
}
#subsidy-charts tr.header-row td.first {
	font-size: 1.2em; 
}
#subsidy-charts td.first, td.program {
	width: 31%;
}
#subsidy-charts td.program{
	text-align: left; 
	padding-left: 10px;
}
#subsidy-charts td.subprogram{
	text-align: left; 
	padding-left: 25px;
}
#subsidy-charts tr.total{
	font-weight:bold;
}
#subsidy-charts tr.subtotal{
	font-style: italic
}
#subsidy-charts tr.subheader{
	font-weight:bold; 
	font-size:.9em;
}
#subsidy-charts tr.subheader td {
	border-right: 1px solid #cccccc;  
	border-bottom: 1px solid #cccccc; 
	border-left: 1px solid #cccccc;
}
/** #subsidy-charts tr.even td { 
	background-color: #f4f4f4; 
}**/
#subsidy-charts td { 
	padding: 7px; 
	border-bottom: none; 
}
#subsidy-charts table {
	text-align:center; 
	border-bottom: 1px solid #cccccc; 
	border-right:none; 
	border-left: none; 
	width:660px;
	margin-top:15px;
	font-size: 90%;
}

tbody td:nth-of-type(even){
	background: #EEEEEE;
	border-left: 1px solid #cccccc;
	border-right: 1px solid #cccccc;
}
tbody tr:nth-of-type(even){
	border-bottom: 1px dashed #d3d3d3;
	border-top: 1px dashed #d3d3d3;
}
tbody td:last-of-type{
	border-right: none;
}

#cop-table tbody td:nth-of-type(even){
	background: none;
}

#cbo-table-revised tbody td:nth-of-type(even), #cbo-table tbody td:nth-of-type(even){
	background: none;
}


.widget-no-border{
	border: none;
}
.widget-no-padding{
	padding: 0;
}
/* ... */

